[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/MainMenu/PlayMenu/PlayMenuOnline.gd" type="Script" id=1]
[ext_resource path="res://Assets/Game/Player/Player1/Front_idle.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu/Icons/gamepad1.png" type="Texture" id=3]
[ext_resource path="res://Scenes/MainMenu/PlayMenu/PlayerInput.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Game/Player/Icons/Player4.png" type="Texture" id=5]
[ext_resource path="res://Assets/Game/Player/Icons/Player2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Game/Player/Icons/Player3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menu/Icons/gamepad2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menu/Icons/gamepad3.png" type="Texture" id=9]
[ext_resource path="res://Scenes/MainMenu/PlayMenu/PlayerAddRemNetwork.gd" type="Script" id=10]
[ext_resource path="res://Scenes/TextButton.gd" type="Script" id=11]
[ext_resource path="res://Assets/Menu/Icons/plus.png" type="Texture" id=12]
[ext_resource path="res://Assets/Menu/Icons/gamepad4.png" type="Texture" id=13]
[ext_resource path="res://Assets/Menu/Icons/buttonStart.png" type="Texture" id=14]
[ext_resource path="res://Ressources/Theme.tres" type="Theme" id=15]
[ext_resource path="res://Scenes/MainMenu/TextureButtons.gd" type="Script" id=16]
[ext_resource path="res://Assets/Menu/Icons/robot.png" type="Texture" id=17]

[sub_resource type="Animation" id=1]
resource_name = "copy"
tracks/0/type = "value"
tracks/0/path = NodePath("Status:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 0.105112, 0.87055, 4.43828 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.180392, 0.8, 0.443137, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PlayOnlineMenu" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -421.0
margin_top = -341.0
margin_right = 421.0
margin_bottom = 341.0
theme = ExtResource( 15 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 822.0
margin_bottom = 702.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBox"]
margin_right = 802.0
margin_bottom = 42.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnDisconnect" type="Button" parent="VBox/HBoxContainer"]
margin_right = 171.0
margin_bottom = 42.0
mouse_default_cursor_shape = 2
text = "Disconnect"
script = ExtResource( 11 )
lang_tile = "disconnect"

[node name="Control" type="Control" parent="VBox/HBoxContainer"]
margin_left = 179.0
margin_right = 462.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="Status" type="Button" parent="VBox/HBoxContainer"]
margin_left = 470.0
margin_right = 802.0
margin_bottom = 42.0
mouse_default_cursor_shape = 2
text = "Connected at 192.168.1.1!"
align = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBox/HBoxContainer"]
anims/copy = SubResource( 1 )

[node name="PlayerSelect" type="GridContainer" parent="VBox"]
margin_top = 50.0
margin_right = 802.0
margin_bottom = 574.0
custom_constants/vseparation = 50
custom_constants/hseparation = 50
columns = 2

[node name="Player1" type="VBoxContainer" parent="VBox/PlayerSelect"]
margin_right = 376.0
margin_bottom = 232.0
script = ExtResource( 10 )
pid = "1"
menu = NodePath("../../..")

[node name="Container" type="HBoxContainer" parent="VBox/PlayerSelect/Player1"]
margin_right = 376.0
margin_bottom = 192.0
rect_min_size = Vector2( 350, 192 )

[node name="Icons" type="VBoxContainer" parent="VBox/PlayerSelect/Player1/Container"]
margin_right = 168.0
margin_bottom = 192.0
rect_min_size = Vector2( 168, 192 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerIcon" type="TextureRect" parent="VBox/PlayerSelect/Player1/Container/Icons"]
margin_right = 168.0
margin_bottom = 136.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/PlayerSelect/Player1/Container/Icons"]
margin_top = 144.0
margin_right = 168.0
margin_bottom = 192.0

[node name="ControllerIcon" type="TextureRect" parent="VBox/PlayerSelect/Player1/Container/Icons/HBoxContainer"]
margin_right = 168.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" parent="VBox/PlayerSelect/Player1/Container" instance=ExtResource( 4 )]
margin_left = 176.0
margin_right = 376.0
margin_bottom = 192.0
menu = NodePath("../../../../../../PlayOnlineMenu")

[node name="BotIcon" type="TextureRect" parent="VBox/PlayerSelect/Player1/Container"]
visible = false
margin_left = 384.0
margin_right = 584.0
margin_bottom = 192.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
texture = ExtResource( 17 )
expand = true
stretch_mode = 6

[node name="PlayerName" type="Label" parent="VBox/PlayerSelect/Player1"]
margin_top = 200.0
margin_right = 376.0
margin_bottom = 232.0
focus_next = NodePath("../../Player2/PlayerNameInput")
text = "Player 1"
align = 1

[node name="Player2" type="VBoxContainer" parent="VBox/PlayerSelect"]
margin_left = 426.0
margin_right = 802.0
margin_bottom = 232.0
script = ExtResource( 10 )
pid = "2"
menu = NodePath("../../..")

[node name="Container" type="HBoxContainer" parent="VBox/PlayerSelect/Player2"]
margin_right = 376.0
margin_bottom = 192.0
rect_min_size = Vector2( 350, 192 )

[node name="Icons" type="VBoxContainer" parent="VBox/PlayerSelect/Player2/Container"]
margin_right = 168.0
margin_bottom = 192.0
rect_min_size = Vector2( 168, 192 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerIcon" type="TextureRect" parent="VBox/PlayerSelect/Player2/Container/Icons"]
margin_right = 168.0
margin_bottom = 136.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/PlayerSelect/Player2/Container/Icons"]
margin_top = 144.0
margin_right = 168.0
margin_bottom = 192.0

[node name="ControllerIcon" type="TextureRect" parent="VBox/PlayerSelect/Player2/Container/Icons/HBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnMakeBot" type="TextureButton" parent="VBox/PlayerSelect/Player2/Container/Icons/HBoxContainer"]
visible = false
margin_left = 56.0
margin_right = 104.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_next = NodePath("../../../../PlayerNameInput")
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 17 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="VBox/PlayerSelect/Player2/Container/Icons/HBoxContainer/BtnMakeBot"]
self_modulate = Color( 0.203922, 0.592157, 0.72549, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 2.0
texture = ExtResource( 17 )
expand = true
stretch_mode = 6
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" parent="VBox/PlayerSelect/Player2/Container" instance=ExtResource( 4 )]
visible = false
margin_left = 176.0
margin_right = 376.0
margin_bottom = 192.0
menu = NodePath("../../../../../../PlayOnlineMenu")

[node name="BotIcon" type="TextureRect" parent="VBox/PlayerSelect/Player2/Container"]
margin_left = 176.0
margin_right = 376.0
margin_bottom = 192.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
texture = ExtResource( 17 )
expand = true
stretch_mode = 6

[node name="PlayerName" type="Label" parent="VBox/PlayerSelect/Player2"]
margin_top = 200.0
margin_right = 376.0
margin_bottom = 232.0
focus_next = NodePath("../../Player3")
text = "Player 2"
align = 1

[node name="Player3" type="VBoxContainer" parent="VBox/PlayerSelect"]
margin_top = 282.0
margin_right = 376.0
margin_bottom = 524.0
rect_min_size = Vector2( 0, 242 )
rect_clip_content = true
script = ExtResource( 10 )
pid = "3"
menu = NodePath("../../..")

[node name="Container" type="HBoxContainer" parent="VBox/PlayerSelect/Player3"]
margin_right = 376.0
margin_bottom = 192.0
rect_min_size = Vector2( 350, 192 )

[node name="Icons" type="VBoxContainer" parent="VBox/PlayerSelect/Player3/Container"]
margin_right = 168.0
margin_bottom = 192.0
rect_min_size = Vector2( 168, 192 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerIcon" type="TextureRect" parent="VBox/PlayerSelect/Player3/Container/Icons"]
margin_right = 168.0
margin_bottom = 136.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/PlayerSelect/Player3/Container/Icons"]
margin_top = 144.0
margin_right = 168.0
margin_bottom = 192.0

[node name="ControllerIcon" type="TextureRect" parent="VBox/PlayerSelect/Player3/Container/Icons/HBoxContainer"]
margin_right = 168.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnMakeBot" type="TextureButton" parent="VBox/PlayerSelect/Player3/Container/Icons/HBoxContainer"]
visible = false
margin_left = 88.0
margin_right = 168.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_next = NodePath("../BtnRemove2")
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 17 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="VBox/PlayerSelect/Player3/Container/Icons/HBoxContainer/BtnMakeBot"]
self_modulate = Color( 0.203922, 0.592157, 0.72549, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 2.0
texture = ExtResource( 17 )
expand = true
stretch_mode = 6
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" parent="VBox/PlayerSelect/Player3/Container" instance=ExtResource( 4 )]
visible = false
margin_left = 176.0
margin_right = 376.0
margin_bottom = 192.0
menu = NodePath("../../../../..")

[node name="BotIcon" type="TextureRect" parent="VBox/PlayerSelect/Player3/Container"]
margin_left = 176.0
margin_right = 376.0
margin_bottom = 192.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
texture = ExtResource( 17 )
expand = true
stretch_mode = 6

[node name="BtnAdd" type="TextureButton" parent="VBox/PlayerSelect/Player3"]
visible = false
margin_top = 200.0
margin_right = 350.0
margin_bottom = 392.0
rect_min_size = Vector2( 64, 192 )
focus_next = NodePath("../../Player4")
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="VBox/PlayerSelect/Player3/BtnAdd"]
self_modulate = Color( 0.203922, 0.592157, 0.72549, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 5.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 6
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="VBox/PlayerSelect/Player3"]
margin_top = 200.0
margin_right = 376.0
margin_bottom = 232.0
focus_next = NodePath("../../Player4")
text = "Player 3"
align = 1

[node name="Player4" type="VBoxContainer" parent="VBox/PlayerSelect"]
margin_left = 426.0
margin_top = 282.0
margin_right = 802.0
margin_bottom = 524.0
rect_min_size = Vector2( 0, 242 )
rect_clip_content = true
script = ExtResource( 10 )
pid = "4"
menu = NodePath("../../..")

[node name="Container" type="HBoxContainer" parent="VBox/PlayerSelect/Player4"]
margin_right = 376.0
margin_bottom = 192.0
rect_min_size = Vector2( 350, 192 )

[node name="Icons" type="VBoxContainer" parent="VBox/PlayerSelect/Player4/Container"]
margin_right = 168.0
margin_bottom = 192.0
rect_min_size = Vector2( 168, 192 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerIcon" type="TextureRect" parent="VBox/PlayerSelect/Player4/Container/Icons"]
margin_right = 168.0
margin_bottom = 136.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBox/PlayerSelect/Player4/Container/Icons"]
margin_top = 144.0
margin_right = 168.0
margin_bottom = 192.0

[node name="ControllerIcon" type="TextureRect" parent="VBox/PlayerSelect/Player4/Container/Icons/HBoxContainer"]
margin_right = 168.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 3
texture = ExtResource( 13 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnMakeBot" type="TextureButton" parent="VBox/PlayerSelect/Player4/Container/Icons/HBoxContainer"]
visible = false
margin_left = 88.0
margin_right = 168.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
focus_next = NodePath("../BtnRemove")
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 17 )
texture_hover = ExtResource( 17 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="VBox/PlayerSelect/Player4/Container/Icons/HBoxContainer/BtnMakeBot"]
self_modulate = Color( 0.203922, 0.592157, 0.72549, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 2.0
texture = ExtResource( 17 )
expand = true
stretch_mode = 6
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" parent="VBox/PlayerSelect/Player4/Container" instance=ExtResource( 4 )]
visible = false
margin_left = 176.0
margin_right = 376.0
margin_bottom = 192.0
menu = NodePath("../../../../../../PlayOnlineMenu")

[node name="BotIcon" type="TextureRect" parent="VBox/PlayerSelect/Player4/Container"]
margin_left = 176.0
margin_right = 376.0
margin_bottom = 192.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3
texture = ExtResource( 17 )
expand = true
stretch_mode = 6

[node name="BtnAdd" type="TextureButton" parent="VBox/PlayerSelect/Player4"]
visible = false
margin_right = 350.0
margin_bottom = 192.0
rect_min_size = Vector2( 64, 192 )
focus_next = NodePath("../../../Control/BtnStart")
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="VBox/PlayerSelect/Player4/BtnAdd"]
self_modulate = Color( 0.203922, 0.592157, 0.72549, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 5.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 6
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="VBox/PlayerSelect/Player4"]
margin_top = 200.0
margin_right = 376.0
margin_bottom = 232.0
focus_next = NodePath("../../../Control/BtnStart")
text = "Player 4"
align = 1

[node name="Control" type="CenterContainer" parent="VBox"]
margin_top = 582.0
margin_right = 802.0
margin_bottom = 682.0

[node name="BtnStart" type="TextureButton" parent="VBox/Control"]
margin_left = 351.0
margin_right = 451.0
margin_bottom = 100.0
focus_neighbour_left = NodePath("../../PlayerSelect/Player3/PlayerNameInput")
focus_neighbour_top = NodePath("../../PlayerSelect/Player4/PlayerNameInput")
focus_neighbour_right = NodePath("../../PlayerSelect/Player4/PlayerNameInput")
focus_previous = NodePath("../../PlayerSelect/Player4/PlayerNameInput")
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 14 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBox/Control/BtnStart"]
self_modulate = Color( 0.203922, 0.592157, 0.72549, 1 )
show_behind_parent = true
margin_left = 3.0
margin_top = 3.0
margin_right = 103.0
margin_bottom = 103.0
texture = ExtResource( 14 )
expand = true
stretch_mode = 6
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBox/HBoxContainer/BtnDisconnect" to="." method="_on_BtnDisconnect_pressed"]
[connection signal="pressed" from="VBox/HBoxContainer/Status" to="." method="_on_Status_pressed"]
[connection signal="pressed" from="VBox/PlayerSelect/Player2/Container/Icons/HBoxContainer/BtnMakeBot" to="VBox/PlayerSelect/Player2" method="_on_BtnMakeBot_pressed"]
[connection signal="pressed" from="VBox/PlayerSelect/Player3/Container/Icons/HBoxContainer/BtnMakeBot" to="VBox/PlayerSelect/Player3" method="_on_BtnMakeBot_pressed"]
[connection signal="pressed" from="VBox/PlayerSelect/Player3/BtnAdd" to="VBox/PlayerSelect/Player3" method="_on_BtnAdd_pressed"]
[connection signal="pressed" from="VBox/PlayerSelect/Player4/Container/Icons/HBoxContainer/BtnMakeBot" to="VBox/PlayerSelect/Player4" method="_on_BtnMakeBot_pressed"]
[connection signal="pressed" from="VBox/PlayerSelect/Player4/BtnAdd" to="VBox/PlayerSelect/Player4" method="_on_BtnAdd_pressed"]
[connection signal="pressed" from="VBox/Control/BtnStart" to="." method="_on_BtnStart_pressed"]
